styling refactored for smaller screen, jump links fixed, animations set

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -22,7 +22,7 @@ nav a:visited:hover{
 nav {
     background-color: #13283b;
     width: 100%;
-    height: 7rem;
+    height: 5rem;
     z-index: 9999;
     position: fixed;
     -webkit-box-shadow: 0px 10px 17px -4px rgba(0,0,0,1);
@@ -32,19 +32,19 @@ nav {
 }
 
 .logo-header {
-    width: 5rem;
+    width: 4rem;
     height: auto;
     float: left;
 }
 .identifier {
-    margin: 1rem 0;
+    margin: 0.5rem 0;
 }
 
 .identifier-text {
     list-style: none;
     float: left;
     padding: 0;
-    margin: 1.4rem 0;
+    margin: 1rem 0;
     color: #FFF;
 }
 
@@ -61,7 +61,7 @@ nav {
 .links > li {
     display: inline-block;
     margin: 0 1rem;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
 }
 
 .content-footer,
@@ -86,9 +86,9 @@ nav {
 
 .masthead-intro {
   font-family: "Ubuntu", "Helvetica Neue", sans-serif;
-  font-size: 3em;
+  font-size: 2.5em;
     background-color: rgba(255,255,255,0.5);
-    width: 55%;
+    width: 65%;
     margin: 0 auto;
     padding: 3rem 2rem;
 }
@@ -113,6 +113,7 @@ nav {
     -moz-box-shadow: 10px 10px 13px 0px rgba(0,0,0,0.49);
     box-shadow: 10px 10px 13px 0px rgba(0,0,0,0.49);
     border-radius: 0.6rem;
+    position: relative;
 }
 
 .project-wrapper {
@@ -120,9 +121,15 @@ nav {
     text-align: center;
     margin: 0;
     height: 100%;
+    width: 100%;
     background-color: rgba(255,255,255,0.8);
     padding: 1rem;
-    display: none;
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0s linear 0.3s,opacity 0.3s linear;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 .nav-project-text {
@@ -148,7 +155,7 @@ nav {
     background-size: cover;
 }
 
-.hot-cold {
+.list-minder {
     background-image: url(../images/list_minder_square.png);
     background-size: cover;
 }
@@ -168,7 +175,16 @@ nav {
     background-size: cover;
 }
 
-
+.api:hover .project-wrapper,
+.quiz:hover .project-wrapper,
+.list-minder:hover .project-wrapper,
+.about:hover .project-wrapper,
+.resume:hover .project-wrapper,
+.contact:hover .project-wrapper {
+    visibility:visible;
+    opacity:1;
+    transition-delay:0s;
+}
 
 
 .projects {
@@ -180,19 +196,19 @@ nav {
 .projects a:visited {
     text-decoration: none;
     font-family: "Slabo 27px", Georgia, serif;
-    font-weight: 100;
     color: #e57736;
 }
 
 .project-header {
     text-align: center;
-    font-size: 4rem;
+    font-size: 3rem;
     font-weight: 100;
+    padding-top: 3rem;
 }
 
 .project-title {
     font-family: "Slabo 27px", Georgia, serif;
-    font-weight: 100;
+    font-weight: bold;
 }
 
 .projects > div {
@@ -209,29 +225,29 @@ nav {
 .left-project img{
     width: 50%;
     height: auto;
-    padding: 2em;
+    padding: 5.5em 2em;
     float: left;
 }
 
 .project-text-left {
     width: 50%;
     margin-left: 50%;
+    padding: 12em 0;
 }
 
 .left-project  h2 {
-    margin: 20% auto 2rem auto;
+    margin: 0 auto 2rem auto;
     text-align: center;
     color: #e57736;
-    font-size: 3rem;
+    font-size: 2.2rem;
 }
 
 .left-desc {
     margin: 0 auto;
-    max-width: 50%;
+    max-width: 70%;
     padding-top: 3rem auto;
-    font-size: 1.3rem;
-    font-weight: 100;
     text-align: center;
+    letter-spacing: 0.05em;
 }
 
 .right-project {
@@ -242,35 +258,37 @@ nav {
 
 .project-text-right {
     width: 50%;
+    padding: 12em 0;
 }
 
 .right-project img {
     width: 50%;
     height: auto;
     float: right;
-    padding: 2rem;
+    padding: 5.5em 2rem;
 }
 
 .right-project  h2 {
-    margin: 20% auto 2rem auto;
+    margin: 0 auto 2rem auto;
     text-align: center;
     color: #e57736;
-    font-size: 3rem;
+    font-size: 2.2rem;
 }
 
 .right-desc {
     margin: 0 auto;
-    max-width: 50%;
+    max-width: 70%;
     padding-top: 3rem auto;
-    font-size: 1.3rem;
     font-weight: 100;
     text-align: center;
+    letter-spacing: 0.05em;
 }
 
 /* About-Me Section*/
 .about-me {
     max-width: 80%;
     margin: 0 auto;
+    padding: 5.5em 0;
 }
 
 .about-me a,
@@ -286,15 +304,20 @@ nav {
     transition: color 0.5s ease;
 }
 
-.about-me h1 {
-    font-size: 3rem;
+.about-me h2 {
+    font-size: 2rem;
     margin: 0;
-    color: #0166A7;;
 }
 
 .info {
-    margin: 5rem 0 5rem 18%;
+    margin: 0 auto;
     width: 80%;
+}
+
+.about-title {
+    text-align: center;
+    color: #021126;
+    font-size: 3rem;
 }
 
 .about-me-img {
@@ -306,19 +329,18 @@ nav {
 
 .intro-text {
     text-align: left;
-    padding-top: 2rem;
 }
 
 .familytag {
     color: gray;
 }
 
-.questions > h2 {
-    font-family: "Indie Flower", Georgia, serif;
+.questions h3 {
+    font-family: "Slabo 27px", Georgia, serif;
     font-size: 1.2em;
     font-weight: bold;
     margin: 2em 0 1em 0;
-    color: #A76201;
+    color: #e57736;
 }
 
 
@@ -335,21 +357,46 @@ nav {
 .social {
   padding: 0;
   list-style: none;
+
 }
 
-.social > li {
+.social li {
   display: inline-block;
-  margin: 0 1em;
+  margin: 0 1.5em;
+    position: relative;
 }
 
 .social img {
-    width: 3rem;
+    width: 4rem;
     height: auto;
+    float: left;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
+.social img:hover {
+    width: 5rem;
+    height: auto;
+    transition: width 0.2s linear;
+}
 
-.social a{
+.social p {
+    float: left;
+    padding: 0.5rem 0 0.5rem 5.2em;
+}
+
+.social a,
+.social a:visited{
     padding: 0;
+    color: #FFF;
+    text-decoration: none;
+}
+
+.social a:hover,
+social a:visited:hover {
+    color: #e57736;
+    transition: color 0.5s ease;
 }
 
 .introduction > p,
